--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/pawprint.png" />
+    <link rel="icon" type="image/png" href="/animals.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Groovy Vetcare</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
